# predictive_mlops_demo

./: JOURNEY.md  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-to-prod.yaml  staging.yaml
deployment/terraform/: variables.tf
fraud_detector/: __init__.py  config.py  model.py
fraud_detector/config/: training.yaml
fraud_detector/pipelines/: submit_pipeline.py  training_pipeline.py
fraud_detector/pipelines/components/: data_profile_op.py  evaluate_op.py  feature_engineering_op.py  monitoring_op.py  predict_op.py  register_op.py  train_op.py  write_predictions_op.py
scripts/: setup_data.py
